# CobsTicketToy

./: .gitignore  Main.py  README.md  pyproject.toml
data/: AJ.csv  AJs.csv
pages/: 1_Look_up_the_price.py  2_Bulk_insert.py
src/cobstickettoy/: cobstickettoy.py  db.py
